--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 [run]
 branch = True
-source = <PKG_NAME>
-include = */<PKG_NAME>/*
+source = brainrevenge
+include = */brainrevenge/*
 omit =
     */setup.py
     */tests/*
